[package]
name = "cryp_t_rust"
version = "0.1.0"
authors = ["Pythocrates <23015037+Pythocrates@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
home = "0.5.3"
predicates = "1.0.5"
symlink = "0.1.0"
